RESOLVED FIXED60140
Safari: Video at apple.com cannot play at full screen mode with layout distortion
https://bugs.webkit.org/show_bug.cgi?id=60140
Summary Safari: Video at apple.com cannot play at full screen mode with layout distor...
Jer Noble
Reported 2011-05-03 22:01:49 PDT
Safari: Mac top page has some videos. During playback "Watch the iPad 2" video, click "Full screen" button. The movie does not played at full screen mode and the tabs of HP and movie list is shown on the top of the movie.
Attachments
Patch (15.00 KB, patch)
2011-05-03 22:46 PDT, Jer Noble
koivisto: review+
Jer Noble
Comment 1 2011-05-03 22:46:27 PDT
Jer Noble
Comment 2 2011-05-03 23:17:05 PDT
Antti Koivisto
Comment 3 2011-05-04 01:41:08 PDT
Comment on attachment 92194 [details] Patch r=me
Simon Fraser (smfr)
Comment 4 2011-05-04 07:51:09 PDT
Comment on attachment 92194 [details] Patch Transforms also create stacking context, so you should reset those too.
Jer Noble
Comment 5 2011-05-04 17:08:12 PDT
Note You need to log in before you can comment on or make changes to this bug.