Source/WebCore/dom/Element.h
@@ -303,6 +303,10 @@ public:
     static bool isMathMLElement() { return false; }
 #endif
 
+#if ENABLE(VIDEO)
+    virtual bool isMediaElement() const { return false; }
+#endif
+
 #if ENABLE(INPUT_SPEECH)
     virtual bool isInputFieldSpeechButtonElement() const { return false; }
 #endif
